--- a/Project/Pages/project.xaml
+++ b/Project/Pages/project.xaml
@@ -26,7 +26,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Label Content="Личный кабинет" Grid.Row="0" 
+            <Label Content="Проекты" Grid.Row="0" 
                    HorizontalAlignment="Center" 
                    FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
                    Margin="0,10"/>
@@ -46,8 +46,9 @@
                     Grid.Row="6" Height="30" Margin="10,0"/>
             <Button Content="Мои задачи" Click="MyTasks_Click" 
                     Grid.Row="8" Height="30" Margin="10,0"/>
+
         </Grid>
-        <Grid Grid.Column="1" Margin="20">
+        <Grid Grid.Column="1" Margin="20,9,20,31">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="5"/>
@@ -61,19 +62,16 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Image Width="100" Height="100" Source="/Image/avata.jpg"
-                   Grid.Row="0" Grid.Column="0"/>
-            <StackPanel Grid.Row="0" Grid.Column="1" Margin="10,0,0,0">
-                <Label Content="Фамилия Имя Отчество" 
+            <Label Content="Проекты" 
                        FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-                <Label Content="xx@xx.xx" Margin="0,5,0,0"/>
-            </StackPanel>
-            <Button Content="Редактировать профиль" Click="EditProfil" Height="30" Margin="166,65,100,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White"/>
-            <Button Content="Выйти" Click="Exit" Height="30" Margin="370,65,10,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White"/>
-            <Label Content="О себе" Grid.Row="4" Grid.ColumnSpan="2"
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
-            <TextBlock Grid.Row="6" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                   Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."/>
+            <Button Content="Создать проект" Click="AllEmployees_Click" Height="30" Width="202" Background="#FF0F0FE3" Margin="233,7,10,5" Grid.Column="1" Foreground="White"/>
+
+
+        </Grid>
+        <Grid Grid.Column="1" Margin="20,82,20,31" Background="White">
+            <Image Height="130" Width="130" Margin="205,50,205,137" Source="/Image/project.jpg"/>
+            <Label Content="У вас пока нет проектов" Margin="204,210,204,95" Foreground="#FF9B9B9B"/>
+            <Button Content="Создать проект" Click="AllEmployees_Click" Height="30" Width="202" Background="#FF0F0FE3" Margin="179,247,179,60" Foreground="White"/>
         </Grid>
     </Grid>
 </Page>
