--- a/Project/Pages/Kanban.xaml
+++ b/Project/Pages/Kanban.xaml
@@ -1,14 +1,123 @@
-﻿<Page x:Class="Project.Pages.Kanban"
+﻿<Page x:Class="Project.Pages.ProjectTasks"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Project.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Kanban">
+      d:DesignHeight="600"
+      Title="ProjectTasks" Width="1268">
 
-    <Grid>
-        
+    <Grid Background="#FFE5E5E5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Background="#F5F5F5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="15"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Label Content="Проекты" Grid.Row="0" 
+                   HorizontalAlignment="Center" 
+                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
+                   Margin="0,10"/>
+
+            <Grid Grid.Row="2" Margin="5,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Image Width="30" Height="30" Source="C:\Users\anuta\Source\Repos\up_elt_kob\Project\Image\avata.jpg"/>
+                <Label Content="Фамилия Имя Отчество" Grid.Column="1" 
+                       Margin="5,0,0,0" VerticalAlignment="Center"
+                       Foreground="#FF0F0FE3" FontWeight="Bold"/>
+            </Grid>
+
+            <Button Content="Все сотрудники" Click="AllEmployees_Click" 
+                    Grid.Row="4" Height="30" Margin="10,0"/>
+            <Button Content="Проекты" Click="Projects_Click" 
+                    Grid.Row="6" Height="30" Margin="10,0"/>
+            <Button Content="Мои задачи" Click="MyTasks_Click" 
+                    Grid.Row="8" Height="30" Margin="10,0"/>
+        </Grid>
+        <Grid Grid.Column="1" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Проекты / " FontWeight="Bold"/>
+                    <Label Content="Name_project" FontWeight="Bold" Foreground="#FF0F0FE3"/>
+                </StackPanel>
+
+                <Button Content="Добавить задачу" Grid.Column="1" 
+                        Click="AddTask_Click" Background="#FF0F0FE3" 
+                        Foreground="White" Padding="10,5"/>
+            </Grid>
+            <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                <StackPanel Orientation="Horizontal" Height="500">
+                    <Border Width="250" Margin="5" Background="White" CornerRadius="5" Padding="5">
+                        <StackPanel>
+                            <Label Content="новые" FontWeight="Bold" HorizontalAlignment="Center"/>
+                            <Border Margin="0,5" BorderBrush="LightGray" BorderThickness="1" Padding="5">
+                                <StackPanel>
+                                    <Label Content="Наименование задачи" FontWeight="Bold"/>
+                                    <Label Content="Ответственные: Фамилия Имя Отчество" FontSize="10"/>
+                                    <Label Content="подзадачи" FontSize="10" Foreground="Gray"/>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                    </Border>
+                    <Border Width="250" Margin="5" Background="White" CornerRadius="5" Padding="5">
+                        <StackPanel>
+                            <Label Content="в процессе" FontWeight="Bold" HorizontalAlignment="Center"/>
+                        </StackPanel>
+                    </Border>
+                    <Border Width="250" Margin="5" Background="White" CornerRadius="5" Padding="5">
+                        <StackPanel>
+                            <Label Content="можно проверять" FontWeight="Bold" HorizontalAlignment="Center"/>
+                            <Border Margin="0,5" BorderBrush="LightGray" BorderThickness="1" Padding="5">
+                                <StackPanel>
+                                    <Label Content="Наименование задачи" FontWeight="Bold"/>
+                                    <Label Content="Ответственные: Фамилия Имя Отчество" FontSize="10"/>
+                                    <Label Content="подзадачи" FontSize="10" Foreground="Gray"/>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                    </Border>
+                    <Border Width="250" Margin="5" Background="White" CornerRadius="5" Padding="5">
+                        <StackPanel>
+                            <Label Content="готово" FontWeight="Bold" HorizontalAlignment="Center"/>
+                            <Border Margin="0,5" BorderBrush="LightGray" BorderThickness="1" Padding="5">
+                                <StackPanel>
+                                    <Label Content="Наименование задачи" FontWeight="Bold"/>
+                                    <Label Content="Ответственные: Фамилия Имя Отчество" FontSize="10"/>
+                                    <Label Content="подзадачи" FontSize="10" Foreground="Gray"/>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                    </Border>
+
+                   
+                </StackPanel>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Page>
