--- a/Project/Pages/Login.xaml
+++ b/Project/Pages/Login.xaml
@@ -9,53 +9,56 @@
       Title="Login">
 
     <Grid Background="#FFE5E5E5">
-        <Grid Margin="202,108,189,109" Background="White">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="10"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="10"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="15"/>
-            </Grid.RowDefinitions>
-            <Label Content="Авторизация" Grid.Row="0"
+        <Border Grid.Row="1" Background="White" Margin="150,100,150,100" CornerRadius="10">
+            <Grid Margin="0,10,0,10" Background="White">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="15"/>
+                </Grid.RowDefinitions>
+                <Label Content="Авторизация" Grid.Row="0"
                    HorizontalAlignment="Center"
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-            <TextBox Text="Почта xx@xx.xx" x:Name="txtUsername" Grid.Row="2"
+                   FontFamily="Verdana" FontWeight="Bold" FontSize="24" Margin="0,10,0,0" Grid.RowSpan="2"/>
+                <TextBox Text="Почта xx@xx.xx" x:Name="txtUsername" Grid.Row="2"
                      Height="30" Width="300" Foreground="#FFA6A6A6" 
-                     FontFamily="Malgun Gothic" HorizontalAlignment="Center"/>
-            <TextBox x:Name="txtPassword" Grid.Row="4"
+                     FontFamily="Verdana" HorizontalAlignment="Center" Padding="0,0,50,0" ScrollViewer.CanContentScroll="True" SelectionOpacity="-26" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" BorderBrush="#FFE6E6E6" Margin="0,3,0,2" Grid.RowSpan="2"/>
+                <TextBox x:Name="txtPassword" Grid.Row="4"
                      Height="30" Width="300" Text="Пароль" Foreground="#FFA6A6A6" 
-                     FontFamily="Malgun Gothic" HorizontalAlignment="Center"/>
-            <Button Content="Авторизоваться" Grid.Row="6"
+                     FontFamily="Verdana" HorizontalAlignment="Center" BorderBrush="#FFE6E6E6" Margin="0,5,0,22" Grid.RowSpan="2"/>
+                <Button Content="Авторизоваться" Grid.Row="5"
                     Height="34" Background="Black" Foreground="White" 
                     FontWeight="Bold" Click="LoginButton_Click" 
                     HorizontalAlignment="Center" Width="300" 
-                    FontFamily="Malgun Gothic"/>
-            <TextBlock Text="Или" Grid.Row="8" FontWeight="Bold" 
-                      HorizontalAlignment="Center" FontFamily="Malgun Gothic"/>
-            <TextBlock Text="Создать аккаунт" Grid.Row="10" 
+                    FontFamily="Verdana" Margin="0,40,0,18" Grid.RowSpan="5"/>
+                <TextBlock Text="Или" Grid.Row="8" FontWeight="Bold" 
+                      HorizontalAlignment="Center" FontFamily="Verdana" Margin="0,13,0,3" Grid.RowSpan="2"/>
+                <TextBlock Text="Создать аккаунт" Grid.Row="9" 
                        HorizontalAlignment="Center" FontWeight="Bold" 
-                       TextDecorations="Underline" Foreground="#FF0F0FE3">
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Setter Property="Cursor" Value="Hand"/>
-                        <Setter Property="Foreground" Value="Blue"/>
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="TextDecorations" Value="Underline"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-                <TextBlock.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding RegisterCommand}"/>
-                </TextBlock.InputBindings>
-            </TextBlock>
-        </Grid>
+                       TextDecorations="Underline" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,33,0,-31">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="Foreground" Value="Blue"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="TextDecorations" Value="Underline"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <TextBlock.InputBindings>
+                        <MouseBinding Gesture="LeftClick" Command="{Binding RegisterCommand}"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </Grid>
+        </Border>
     </Grid>
 </Page>
