--- a/Project/Pages/PersonalAccount.xaml
+++ b/Project/Pages/PersonalAccount.xaml
@@ -1,17 +1,18 @@
 ﻿<Page x:Class="Project.Pages.PersonalAccount"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Project.Pages"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PersonalAccount">
 
     <Grid Background="#FFE5E5E5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="143*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Background="#F5F5F5">
             <Grid.RowDefinitions>
@@ -26,9 +27,9 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Label Content="Личный кабинет" Grid.Row="0" 
-                   HorizontalAlignment="Center" 
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
+            <Label Content="Личный кабинет" Grid.Row="0"
+                   HorizontalAlignment="Center"
+                   FontFamily="Verdana" FontWeight="Bold" FontSize="18"
                    Margin="0,10"/>
             <Grid Grid.Row="2" Margin="5,0">
                 <Grid.ColumnDefinitions>
@@ -36,18 +37,18 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Image Width="30" Height="30" Source="/Image/avata.jpg"/>
-                <Label Content="Фамилия Имя Отчество" Grid.Column="1" 
+                <Label Content="Фамилия Имя Отчество" Grid.Column="1"
                        Margin="5,0,0,0" VerticalAlignment="Center"
-                       Foreground="#FF0F0FE3" FontWeight="Bold"/>
+                       Foreground="#FF0F0FE3" FontWeight="Bold" FontFamily="Verdana"/>
             </Grid>
-            <Button Content="Все сотрудники" Click="AllEmployees_Click" 
-                    Grid.Row="4" Height="30" Margin="10,0"/>
-            <Button Content="Проекты" Click="Projects_Click" 
-                    Grid.Row="6" Height="30" Margin="10,0"/>
-            <Button Content="Мои задачи" Click="MyTasks_Click" 
-                    Grid.Row="8" Height="30" Margin="10,0"/>
+            <Button x:Name="AllEmployees" Content="Все сотрудники" Click="AllEmployees"
+                    Grid.Row="4" Height="30" Margin="10,0" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
+            <Button x:Name="Projects" Content="Проекты" Click="Projects"
+                    Grid.Row="6" Height="30" Margin="10,0" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
+            <Button x:Name="MyTasks" Content="Мои задачи" Click="MyTasks"
+                    Grid.Row="8" Height="30" Margin="10,0" FontFamily="Verdana" BorderBrush="#FFC3C3C3"/>
         </Grid>
-        <Grid Grid.Column="1" Margin="20">
+        <Grid Grid.Column="1" Margin="20,20,20,20" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="5"/>
@@ -64,16 +65,16 @@
             <Image Width="100" Height="100" Source="/Image/avata.jpg"
                    Grid.Row="0" Grid.Column="0"/>
             <StackPanel Grid.Row="0" Grid.Column="1" Margin="10,0,0,0">
-                <Label Content="Фамилия Имя Отчество" 
-                       FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-                <Label Content="xx@xx.xx" Margin="0,5,0,0"/>
+                <Label Content="Фамилия Имя Отчество"
+                       FontFamily="Verdana" FontWeight="Bold" FontSize="24"/>
+                <Label Content="xx@xx.xx" Margin="0,5,0,0" FontFamily="Verdana"/>
             </StackPanel>
-            <Button Content="Редактировать профиль" Click="EditProfil" Height="30" Margin="166,65,100,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White"/>
-            <Button Content="Выйти" Click="Exit" Height="30" Margin="370,65,10,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White"/>
+            <Button x:Name="EditProfile" Content="Редактировать профиль" Click="EditProfile" Height="30" Margin="166,65,100,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White" FontFamily="Verdana" BorderBrush="#FF0F0FE3"/>
+            <Button x:Name="Exit" Content="Выйти" Click="Exit" Height="30" Margin="370,65,10,5" Grid.Column="1" Background="#FF0F0FE3" Foreground="White" FontFamily="Verdana" BorderBrush="#FF0F0FE3"/>
             <Label Content="О себе" Grid.Row="4" Grid.ColumnSpan="2"
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
+                   FontFamily="Verdana" FontWeight="Bold" FontSize="14"/>
             <TextBlock Grid.Row="6" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                   Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."/>
+                   Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." FontFamily="Verdana"/>
         </Grid>
     </Grid>
 </Page>
