--- a/Project/Pages/Registration.xaml
+++ b/Project/Pages/Registration.xaml
@@ -9,66 +9,60 @@
       Title="Registration">
 
     <Grid Background="#FFE5E5E5">
-        <Grid Margin="148,90,148,90" Background="White">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="15"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="10"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Label Content="Регистрация" Grid.Row="0"
+        <Border Grid.Row="1" Background="White" Margin="150,100,150,100" CornerRadius="10">
+            <Grid Margin="0,10,0,10" Background="White">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="15"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Label Content="Регистрация" Grid.Row="0"
                    HorizontalAlignment="Center"
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-            <TextBox x:Name="FOI" Grid.Row="2" Height="30" Text="ФИО"
-                     HorizontalAlignment="Center" Width="350"/>
-            <TextBox x:Name="txtEmail" Grid.Row="4" Height="30" Text="Почта xx@xx.xx"
-                     HorizontalAlignment="Center" Width="350"/>
-            <Grid Grid.Row="6" HorizontalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="10"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBox x:Name="txtPassword" Grid.Column="0" 
-                         Height="30" Width="170" Text="Пароль"/>
-                <TextBox x:Name="txtConfirmPassword" Grid.Column="2"
-                         Height="30" Width="170" Text="Подтвердите пароль"/>
-            </Grid>
-            <Button Content="Зарегистрироваться" Grid.Row="10"
+                   FontFamily="Verdana" FontWeight="Bold" FontSize="24"/>
+                <TextBox x:Name="FOI" Height="30" Text="ФИО"
+                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" SelectionBrush="#FF5E707E" BorderBrush="#FFE6E6E6" Margin="0,39,0,15" Grid.RowSpan="2"/>
+                <TextBox x:Name="txtEmail" Grid.Row="1" Height="30" Text="Почта xx@xx.xx"
+                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,40,0,10" Grid.RowSpan="4"/>
+                <Grid Grid.Row="6" HorizontalAlignment="Center">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="txtPassword" Grid.Column="0" 
+                         Height="30" Width="170" Text="Пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,-12,0,17"/>
+                    <TextBox x:Name="txtConfirmPassword" Grid.Column="2"
+                         Height="30" Width="170" Text="Подтвердите пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,-12,0,17"/>
+                </Grid>
+                <Button Content="Зарегистрироваться" Grid.Row="6"
                     Height="35" Background="Black" Foreground="White" 
                     FontWeight="Bold" Click="RegisterButton_Click"
-                    HorizontalAlignment="Center" Width="308"/>
-            <TextBlock Text="Или" Grid.Row="12" FontWeight="Bold" 
-                      HorizontalAlignment="Center" FontFamily="Malgun Gothic"/>
-            <TextBlock Text="Войти в аккаунт" Grid.Row="14"
+                    HorizontalAlignment="Center" Width="350" FontFamily="Verdana" BorderBrush="Black" Margin="0,27,0,-25"/>
+                <TextBlock Text="Или" Grid.Row="6" 
+                      HorizontalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Foreground="Black" Margin="0,67,0,-52" Width="32"/>
+                <TextBlock Text="Войти в аккаунт" Grid.Row="6"
                        HorizontalAlignment="Center" FontWeight="Bold" 
-                       TextDecorations="Underline" Foreground="#FF0F0FE3">
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Setter Property="Cursor" Value="Hand"/>
-                        <Setter Property="Foreground" Value="Blue"/>
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="TextDecorations" Value="Underline"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-                <TextBlock.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding LoginCommand}"/>
-                </TextBlock.InputBindings>
-            </TextBlock>
-        </Grid>
+                       TextDecorations="Underline" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,82,0,-60">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="Foreground" Value="Blue"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="TextDecorations" Value="Underline"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <TextBlock.InputBindings>
+                        <MouseBinding Gesture="LeftClick" Command="{Binding LoginCommand}"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </Grid>
+        </Border>
     </Grid>
 </Page>
