--- a/Project/Pages/Project1.xaml
+++ b/Project/Pages/Project1.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project.Pages.PersonalAccount"
+﻿<Page x:Class="Project.Pages.Project1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Project.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PersonalAccount">
+      Title="Project1">
 
     <Grid Background="#FFE5E5E5">
         <Grid.ColumnDefinitions>
@@ -27,9 +27,9 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Label Content="Проекты" Grid.Row="0" 
-                   HorizontalAlignment="Center" 
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
-                   Margin="0,10"/>
+               HorizontalAlignment="Center" 
+               FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
+               Margin="0,10"/>
             <Grid Grid.Row="2" Margin="5,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -37,15 +37,13 @@
                 </Grid.ColumnDefinitions>
                 <Image Width="30" Height="30" Source="/Image/avata.jpg"/>
                 <Label Content="Фамилия Имя Отчество" Grid.Column="1" 
-                       Margin="5,0,0,0" VerticalAlignment="Center"
-                       Foreground="#FF0F0FE3" FontWeight="Bold"/>
+                   Margin="5,0,0,0" VerticalAlignment="Center"
+                   Foreground="#FF0F0FE3" FontWeight="Bold"/>
             </Grid>
-            <Button Content="Все сотрудники" Click="AllEmployees_Click" 
-                    Grid.Row="4" Height="30" Margin="10,0"/>
-            <Button Content="Проекты" Click="Projects_Click" 
-                    Grid.Row="6" Height="30" Margin="10,0"/>
-            <Button Content="Мои задачи" Click="MyTasks_Click" 
-                    Grid.Row="8" Height="30" Margin="10,0"/>
+            <Button Content="Проекты" Click="Bt1_Projects" 
+                Grid.Row="6" Height="30" Margin="10,0,10,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
+            <Button Content="Мои задачи" Click="Bt1_MyTasks" 
+                Grid.Row="8" Height="30" Margin="10,0"/>
 
         </Grid>
         <Grid Grid.Column="1" Margin="20,9,20,31">
@@ -63,15 +61,15 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Content="Проекты" 
-                       FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-            <Button Content="Создать проект" Click="AllEmployees_Click" Height="30" Width="202" Background="#FF0F0FE3" Margin="233,7,10,5" Grid.Column="1" Foreground="White"/>
+                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
+            <Button Content="Создать проект" Click="Bt_CreateProject" Height="30" Width="202" Background="#FF0F0FE3" Margin="233,7,10,5" Grid.Column="1" Foreground="White"/>
 
 
         </Grid>
         <Grid Grid.Column="1" Margin="20,82,20,31" Background="White">
             <Image Height="130" Width="130" Margin="205,50,205,137" Source="/Image/project.jpg"/>
             <Label Content="У вас пока нет проектов" Margin="204,210,204,95" Foreground="#FF9B9B9B"/>
-            <Button Content="Создать проект" Click="AllEmployees_Click" Height="30" Width="202" Background="#FF0F0FE3" Margin="179,247,179,60" Foreground="White"/>
+            <Button Content="Создать проект" Click="Bt_CreateProject" Height="30" Width="202" Background="#FF0F0FE3" Margin="179,247,179,60" Foreground="White"/>
         </Grid>
     </Grid>
 </Page>
