--- a/Project/Pages/ViewProject.xaml
+++ b/Project/Pages/ViewProject.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project.Pages.ViewProjectPage"
+﻿<Page x:Class="Project.Pages.ViewProject"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -97,7 +97,8 @@
                             Margin="0,0,10,0"
                             FontFamily="Malgun Gothic"
                             Background="#FF0F0FE3" 
-                            Foreground="White"/>
+                            Foreground="White" Click="Bt8_Close"
+                            />
                 </StackPanel>
             </StackPanel>
         </Grid>
