--- a/Project/Pages/creatProject.xaml
+++ b/Project/Pages/creatProject.xaml
@@ -67,7 +67,7 @@
                        FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
 
                 <Button Content="Добавить участника" Width="150" Margin="0,10,0,10"
-                        HorizontalAlignment="Left" Background="#FF0F0FE3" Foreground="White"/>
+                        HorizontalAlignment="Left" Background="#FF0F0FE3" Foreground="White" Click="Bt_AddUsers"/>
 
                 <ListView>
                     <ListViewItem>
@@ -98,10 +98,10 @@
             </StackPanel>
             <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Content="Отмена" Width="100" Height="30" Margin="0,0,10,0"
-                        Click="Cancel_Click"/>
+                        Click="Bt4_Cancel"/>
                 <Button Content="Создать" Width="100" Height="30" 
                         Background="#FF0F0FE3" Foreground="White"
-                        Click="Create_Click"/>
+                        Click="Bt4_Create"/>
             </StackPanel>
         </Grid>
     </Grid>
