--- a/Project/Pages/Login.xaml
+++ b/Project/Pages/Login.xaml
@@ -9,7 +9,7 @@
       Title="Login">
 
     <Grid Background="#FFE5E5E5">
-        <Border Background="White" Margin="150,100,150,74" CornerRadius="10">
+        <Border Background="White" CornerRadius="10" Height="278" VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
             <Grid Margin="0,10,0,10" Background="White">
 
                 <Grid.RowDefinitions>
@@ -28,21 +28,21 @@
                    HorizontalAlignment="Center"
                    FontFamily="Verdana" FontWeight="Bold" FontSize="24" Margin="0,10,0,0" Grid.RowSpan="2"/>
                 <TextBox Text="Почта xx@xx.xx" x:Name="txtUsername" Grid.Row="2"
-                     Height="30" Width="300" Foreground="#FFA6A6A6" 
+                     Height="30" Width="350" Foreground="#FFA6A6A6" 
                      FontFamily="Verdana" HorizontalAlignment="Center" Padding="0,0,50,0" ScrollViewer.CanContentScroll="True" SelectionOpacity="-26" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" BorderBrush="#FFE6E6E6" Margin="0,3,0,2" Grid.RowSpan="2"/>
                 <TextBox x:Name="txtPassword" Grid.Row="4"
-                     Height="30" Width="300" Text="Пароль" Foreground="#FFA6A6A6" 
-                     FontFamily="Verdana" HorizontalAlignment="Center" BorderBrush="#FFE6E6E6" Margin="0,5,0,22" Grid.RowSpan="2"/>
+                     Height="30" Width="350" Text="Пароль" Foreground="#FFA6A6A6" 
+                     FontFamily="Verdana" HorizontalAlignment="Center" BorderBrush="#FFE6E6E6" Margin="0,3,0,50" Grid.RowSpan="2"/>
                 <Button Content="Авторизоваться" Grid.Row="5"
                     Height="34" Background="Black" Foreground="White" 
                     FontWeight="Bold" Click="Bt_Login" 
-                    HorizontalAlignment="Center" Width="300" 
-                    FontFamily="Verdana" Margin="0,40,0,18" Grid.RowSpan="5"/>
+                    HorizontalAlignment="Center" Width="350" 
+                    FontFamily="Verdana" Margin="0,45,0,24" Grid.RowSpan="5"/>
                 <TextBlock Text="Или" Grid.Row="8" FontWeight="Bold" 
                       HorizontalAlignment="Center" FontFamily="Verdana" Margin="0,13,0,3" Grid.RowSpan="2"/>
                 <TextBlock Text="Создать аккаунт" Grid.Row="9" 
-                       HorizontalAlignment="Center" FontWeight="Bold" 
-                       TextDecorations="Underline" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,33,0,-31">
+       HorizontalAlignment="Center" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,28,0,-26"
+       MouseDown="RegisterText_MouseDown" FontWeight="Bold" TextDecorations="Underline">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
                             <Setter Property="Cursor" Value="Hand"/>
@@ -54,9 +54,6 @@
                             </Style.Triggers>
                         </Style>
                     </TextBlock.Style>
-                    <TextBlock.InputBindings>
-                        <MouseBinding Gesture="LeftClick" Command="{Binding RegisterCommand}"/>
-                    </TextBlock.InputBindings>
                 </TextBlock>
             </Grid>
         </Border>
