--- a/Project/Pages/Registration.xaml
+++ b/Project/Pages/Registration.xaml
@@ -9,7 +9,7 @@
       Title="Registration">
 
     <Grid Background="#FFE5E5E5">
-        <Border Background="White" Margin="150,100,150,79" CornerRadius="10">
+        <Border Background="White" CornerRadius="10" Height="278" VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
             <Grid Margin="0,10,0,10" Background="White">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -22,11 +22,11 @@
                 </Grid.RowDefinitions>
                 <Label Content="Регистрация" Grid.Row="0"
                    HorizontalAlignment="Center"
-                   FontFamily="Verdana" FontWeight="Bold" FontSize="24"/>
+                   FontFamily="Verdana" FontWeight="Bold" FontSize="24" Margin="0,10,0,35" Grid.RowSpan="2"/>
                 <TextBox x:Name="FOI" Height="30" Text="ФИО"
-                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" SelectionBrush="#FF5E707E" BorderBrush="#FFE6E6E6" Margin="0,39,0,15" Grid.RowSpan="2"/>
+                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" SelectionBrush="#FF5E707E" BorderBrush="#FFE6E6E6" Margin="0,52,0,2" Grid.Row="1"/>
                 <TextBox x:Name="txtEmail" Grid.Row="1" Height="30" Text="Почта xx@xx.xx"
-                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,40,0,10" Grid.RowSpan="4"/>
+                     HorizontalAlignment="Center" Width="350" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,84,0,17" Grid.RowSpan="6"/>
                 <Grid Grid.Row="6" HorizontalAlignment="Center">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -34,19 +34,20 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBox x:Name="txtPassword" Grid.Column="0" 
-                         Height="30" Width="170" Text="Пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,-12,0,17"/>
+                         Height="30" Width="170" Text="Пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,22,0,-15"/>
                     <TextBox x:Name="txtConfirmPassword" Grid.Column="2"
-                         Height="30" Width="170" Text="Подтвердите пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,-12,0,17"/>
+                         Height="30" Width="170" Text="Подтвердите пароль" FontFamily="Verdana" Foreground="#FFA6A6A6" BorderBrush="#FFE6E6E6" Margin="0,22,0,-15"/>
                 </Grid>
                 <Button Content="Зарегистрироваться" Grid.Row="6"
                     Height="35" Background="Black" Foreground="White" 
                     FontWeight="Bold" Click="Bt_Register"
-                    HorizontalAlignment="Center" Width="350" FontFamily="Verdana" BorderBrush="Black" Margin="0,27,0,-25"/>
+                    HorizontalAlignment="Center" Width="350" FontFamily="Verdana" BorderBrush="Black" Margin="0,55,0,-53"/>
                 <TextBlock Text="Или" Grid.Row="6" 
-                      HorizontalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Foreground="Black" Margin="0,67,0,-52" Width="32"/>
+                      HorizontalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Foreground="Black" Margin="0,95,0,-80" Width="32"/>
                 <TextBlock Text="Войти в аккаунт" Grid.Row="6"
-                       HorizontalAlignment="Center" FontWeight="Bold" 
-                       TextDecorations="Underline" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,82,0,-60">
+       HorizontalAlignment="Center" 
+       TextDecorations="Underline" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,111,0,-89"
+       MouseDown="LoginText_MouseDown" FontWeight="Bold">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
                             <Setter Property="Cursor" Value="Hand"/>
@@ -58,9 +59,6 @@
                             </Style.Triggers>
                         </Style>
                     </TextBlock.Style>
-                    <TextBlock.InputBindings>
-                        <MouseBinding Gesture="LeftClick" Command="{Binding LoginCommand}"/>
-                    </TextBlock.InputBindings>
                 </TextBlock>
             </Grid>
         </Border>
