--- a/Project/Pages/Project1.xaml
+++ b/Project/Pages/Project1.xaml
@@ -13,6 +13,8 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
+        <!-- Левая панель -->
         <Grid Grid.Column="0" Background="#F5F5F5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -26,51 +28,80 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+
             <Label Content="Проекты" Grid.Row="0" 
-               HorizontalAlignment="Center" 
-               FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
-               Margin="0,10"/>
+                   HorizontalAlignment="Center" 
+                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="18" 
+                   Margin="0,10"/>
+
             <Grid Grid.Row="2" Margin="5,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Image Width="30" Height="30" Source="/Image/avata.jpg"/>
-                <Label Content="Фамилия Имя Отчество" Grid.Column="1"
-       Margin="5,0,0,0" 
-       VerticalAlignment="Center"
-       Foreground="#FF000083" 
-       FontWeight="Bold" 
-       FontFamily="Verdana" FontSize="10"
-       MouseDown="PAText_MouseDown"/>
+                <Label Content="{Binding CurrentUser.FullName}" Grid.Column="1"
+                       Margin="5,0,0,0" 
+                       VerticalAlignment="Center"
+                       Foreground="#FF000083" 
+                       FontWeight="Bold" 
+                       FontFamily="Verdana" FontSize="10"
+                       MouseDown="PAText_MouseDown"/>
             </Grid>
-            <Button Content="Проекты" Click="Bt1_Projects" 
-                Grid.Row="6" Height="30" Margin="10,0,10,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
 
+            <Button Content="Проекты" Click="Bt1_Projects" 
+                    Grid.Row="6" Height="30" Margin="10,0,10,0" 
+                    Grid.RowSpan="2" VerticalAlignment="Top"/>
         </Grid>
-        <Grid Grid.Column="1" Margin="20,9,20,31">
+
+        <!-- Основное содержимое -->
+        <Grid Grid.Column="1" Margin="20,9,20,31" Name="MainContentGrid">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="5"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Label Content="Проекты" 
-                   FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
-            <Button Content="Создать проект" Click="Bt_CreateProject" Height="30" Width="202" Background="#FF0F0FE3" Margin="233,7,10,5" Grid.Column="1" Foreground="White"/>
 
-        </Grid>
-        <Grid Grid.Column="1" Margin="20,82,20,31" Background="White">
-            <Image Height="130" Width="130" Margin="205,50,205,137" Source="/Image/project.jpg"/>
-            <Label Content="У вас пока нет проектов" Margin="204,210,204,95" Foreground="#FF9B9B9B"/>
-            <Button Content="Создать проект" Click="Bt_CreateProject" Height="30" Width="202" Background="#FF0F0FE3" Margin="179,247,179,60" Foreground="White"/>
+            <!-- Заголовок и кнопка создания -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Content="Проекты" 
+                       FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="24"/>
+
+                <Button Content="Создать проект" Click="Bt_CreateProject" 
+                        Height="30" Width="202" Background="#FF0F0FE3" 
+                        Margin="0,7,10,5" Grid.Column="1" Foreground="White"/>
+            </Grid>
+
+            <!-- Список проектов -->
+            <Grid Grid.Row="1" Name="ProjectsGrid" Visibility="Collapsed">
+                <ListView Name="ProjectsList">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Name}" Width="200"/>
+                            <GridViewColumn Header="Описание" DisplayMemberBinding="{Binding Description}" Width="300"/>
+                            <GridViewColumn Header="Статус" Width="100">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding IsPublic, Converter={StaticResource BoolToPublicConverter}}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+
+            <Grid Grid.Row="1" Name="NoProjectsGrid" Background="White">
+                <Image Height="130" Width="130" Margin="205,50,205,137" Source="/Image/project.jpg"/>
+                <Label Content="У вас пока нет проектов" Margin="204,210,204,95" Foreground="#FF9B9B9B"/>
+                <Button Content="Создать проект" Click="Bt_CreateProject" 
+                        Height="30" Width="202" Background="#FF0F0FE3" 
+                        Margin="179,247,179,60" Foreground="White"/>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
